samples/_failures_safe/1761296209_1b1f05_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c52b738.c: In function ‘main’:
./samples/SAFE/__tmp_1c52b738.c:161:5: error: expected declaration or statement at end of input
  161 |     if (compressed.data == NULL) {
      |     ^~
./samples/SAFE/__tmp_1c52b738.c:161:5: error: expected declaration or statement at end of input
